Fix image source in oche.html

--- a/oche.html
+++ b/oche.html
@@ -473,7 +473,7 @@
 
             <div class="cards-grid">
                 <div class="card">
-                    <div class="card-media"><img src="iskola.png"></div>
+                    <div class="card-media"><img src=iskola.png></div>
                     <div class="card-body">
                         <h4>Projeto Educacional</h4>
                         <p>Iniciamos como uma <em>startup</em> da EEEP Gonzaga Mota, focada em unir a educação de moda, história e empreendedorismo.</p>
