Correct HTML structure in oche.html
Fixed HTML formatting and corrected paragraph tag.

--- a/oche.html
+++ b/oche.html
@@ -469,11 +469,11 @@
 
         <section id="historia" class="page-content">
             <h2 class="section-title">Nossa História na Moda Cultural</h2>
-            <p>A jornada da OCHE começou com a curiosidade e o respeito pela rica tapeçaria cultural do Nordeste brasileiro. Nascemos de um projeto educacional com o propósito de transcender a moda, transformando peças históricas em narrativas vestíveis para o futuro.</p>
-
+            <p>A jornada da OCHE começou com a curiosidade e o respeito pela rica tapeçaria cultural do Nordeste brasileiro. Nascemos de um projeto educacional com o propósito de transcender a moda, transformando peças históricas em narrativas vestíveis para o futuro.</p
             <div class="cards-grid">
-                <div class="card">
-                    <div class="card-media"><img src=iskola.png></div>
+                <div class="card">html
+                    
+                    <div class="card-media"><img src="iskola.png"></div>
                     <div class="card-body">
                         <h4>Projeto Educacional</h4>
                         <p>Iniciamos como uma <em>startup</em> da EEEP Gonzaga Mota, focada em unir a educação de moda, história e empreendedorismo.</p>
