--- a/oche.html
+++ b/oche.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><h1>OOOOOOOOOOOOOOOOOOOO</h1>OCHE - Organização Cultural e Histórica de Estética</title>
+    <title>OCHE - Organização Cultural e Histórica de Estética</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
